# TagEveryoneBot

./: .env.sample  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
core/: bot.py
core/handlers/: __init__.py  all.py  default.py  on_member_update.py
core/keyboards/: default.py
database/: __init__.py  chats.py  users.py
settings/: config.py
