[project]
name = "tageveryonebot"
version = "0.1.0"
description = ""
authors = [
    {name = "XRMfourD",email = "Globaden96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
